# mobilenet_tvm

./: .gitignore  CMakeLists.txt  main.cc
python/: AutoSchedule_v2_1.ipynb  AutoSchedule_v2_2.py  rpc_deploy.py  tune_cpu.ipynb  tune_cpu_shedule.ipynb  tune_opencl_shedule_v1.ipynb
python/tune_log_file/: mobilenet-NCHW-B1-llvm-C3000-T21-08-11-11-39.json  mobilenet-NCHW-B1-opencl-C20000-T21-08-13-15-24.json  mobilenet-NCHW-B1-opencl-C2800-T21-08-12-19-02.json  mobilenet-NCHW-B1-opencl-C2800-T21-08-12-21-29.json  mobilenet-NCHW-B1-opencl-C2800-T21-08-12-21-31.json  mobilenet-NCHW-B1-opencl-C2800-T21-08-12-21-34.json  mobilenet-NCHW-B1-opencl-C2800-T21-08-12-21-37.json  op9_dla-NCHW-B1-llvm-C2000-T21-08-16-10-51.json  op9_dla-NHWC-B1-llvm-C2000-T21-08-16-13-13.json  profile.txt  resnet50-NCHW-B1-llvm-C2000-T21-08-14-21-25.json  resnet50-NCHW-B1-llvm-C3000-T21-08-15-08-34.json  resnet50-NCHW-B1-llvm-C3000-T21-08-15-08-38.json  resnet50-NCHW-B1-opencl-C2000-T21-08-14-11-40.json  total_latency.tsv
python/tune_log_file/good_log/: readme.txt
python_script/: loaded_image.ipynb  mnist_module_load_test.ipynb  mnist_module_verification.ipynb  mobilenet_build_armv8_cpu.ipynb  mobilenet_build_armv8_cpu_tflite.ipynb  mobilenet_build_armv8_opencl.ipynb  mobilenet_build_armv8_opencl_tflite.ipynb  mobilenet_build_armv8_x64_tflite.ipynb  mobilenet_build_x64.ipynb
